test/visibility/submodule-in-file/errors/BlankIncludePrivate.good
BlankIncludePrivate.chpl:1: error: cannot make a private module public through an include statement
BlankIncludePrivate/SubModule.chpl:1: note: module declared private here
